--- a/jquery.html
+++ b/jquery.html
@@ -14,12 +14,45 @@
       color: red;
     }
     </style>
-    
+
 </head>
 <body>
   <p id="name" class="name" style="visibility: hidden">名前</p>
   <button id="show" >名前を表示</button>
-  <button id="colorChange">名前色を変える</button>
+  <button id="colorChange">名前の色を変える</button>
+  <br>
+  <hr>
+
+  <div>
+    趣味は何ですか？
+    <select id="hobby" name="hobby">
+      <option value="1">--</option>
+      <option value="2">トライアスロン</option>
+      <option value="3">その他</option>
+    </select>
+  </div>
+  <div class="2" style="display: none">
+    それでは好きな種目は？
+    <input type="radio" name="t" value="Swim"> Swim
+    <input type="radio" name="t" value="Bike"> Bike
+    <input type="radio" name="t" value="Run"> Run
+  </div>
+  <div class="3" style="display: none">
+    それでは何が好き？
+    <input type="text">
+  </div>
+
+  <form action="#" id="ex04">
+    名前：<input type="text" name="name" id="inputName">
+    <button>送信</button>
+  </form>
+
+  <form action="#" id="ex05">
+    メールアドレス：<input type="email" name="email" id="inputEmail">
+    <button>送信</button>
+  </form>
+
+
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="jquery.js"></script>
 </body>
